--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
-    "clsx": "^2.1.1",
+    "clsx": "2.1.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.15",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "11.11.8",
     "next": "14.2.15",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.3.0",
-    "react-intersection-observer": "^9.13.1",
+    "react-icons": "5.3.0",
+    "react-intersection-observer": "9.13.1",
+    "react-vertical-timeline-component": "3.6.0",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.3"
+  },
+  "devDependencies": {
+    "@types/react-vertical-timeline-component": "3.3.3"
   }
 }
