--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "02-portfolio-web-typescript",
+  "name": "portfolio-web-typescript",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "0.0.25",
+    "@react-email/tailwind": "0.1.0",
     "@types/node": "22.7.5",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
@@ -21,9 +23,11 @@
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "2.4.1",
     "react-icons": "5.3.0",
     "react-intersection-observer": "9.13.1",
     "react-vertical-timeline-component": "3.6.0",
+    "resend": "4.0.0",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.3"
   },
